# markdown-editor

./: .env.example  .gitignore  CLAUDE.md  COLLABORATION.md  README.md  docker-compose.yml  lefthook.yml
.claude/team-sessions/: .index.json
.claude/team-sessions/session-20260405-160516/: architecture.md  prd.md  review.md
backend/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pyrightconfig.json
backend/apps/api/: bootstrap.py  container.py  main.py  pyproject.toml  websocket.py
backend/apps/api/routes/: __init__.py  auth.py  pages.py
backend/apps/api/services/: __init__.py  auth_service.py  page_service.py  page_store.py
frontend/: CLAUDE.md  Dockerfile  eslint.config.js  nginx.conf  package.json  pnpm-lock.yaml
frontend/app/: package.json  tsconfig.app.json  vite.config.ts
frontend/app/src/: App.tsx  index.css  router.tsx
frontend/app/src/auth/hooks/: useAuth.ts
frontend/app/src/auth/modules/LoginPage/: LoginPage.tsx
frontend/app/src/auth/modules/LoginPage/hooks/: useLoginPage.ts
frontend/app/src/auth/modules/SignupPage/: SignupPage.tsx
frontend/app/src/auth/modules/SignupPage/hooks/: useSignupPage.ts
frontend/app/src/auth/state/: authAtoms.ts
frontend/app/src/auth/useCases/: authUseCases.ts
frontend/app/src/dashboard/modules/: DashboardIndex.tsx  NotFoundView.tsx
frontend/app/src/dashboard/modules/DashboardShell/: DashboardShell.tsx  PageSearchResults.tsx  PageTreeNav.tsx  usePageSearch.ts
frontend/app/src/dashboard/modules/PagesView/: PagesView.tsx
frontend/app/src/dashboard/modules/SettingsView/: SettingsView.tsx
frontend/app/src/editor/hooks/: usePageEditor.ts  usePages.ts
frontend/app/src/editor/modules/EditorView/: EditPageView.tsx  EditorCanvas.tsx  EditorPageLayout.tsx  NewPageView.tsx
frontend/app/src/editor/modules/EditorView/components/: EditPageFooter.tsx  NewPageFooter.tsx  PageSlugInput.tsx  PageTitleInput.tsx
frontend/app/src/editor/modules/EditorView/hooks/: useEditPage.ts  useEditorForm.ts
frontend/app/src/editor/state/: pageAtoms.ts
frontend/app/src/editor/useCases/: pageUseCases.ts
frontend/app/src/theme/: ThemeProvider.tsx  ThemeToggle.tsx
