[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdown-editor-backend"
version = "0.1.0"
description = "Markdown editor backend monorepo"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.9",
  "mypy>=1.13",
  "types-passlib>=1.7",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "packages"]

[tool.uv.workspace]
members = ["apps/api", "packages/core", "packages/persistence", "packages/collaboration"]

[tool.uv.sources]
core = { workspace = true }
persistence = { workspace = true }
collaboration = { workspace = true }

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # Pyflakes
  "I",    # isort
  "C",    # flake8-comprehensions
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "ARG",  # flake8-unused-arguments
  "SIM",  # flake8-simplify
  "RUF",  # Ruff-specific rules
  "C901", # McCabe complexity
  "RET",  # flake8-return
  "LOG",  # flake8-logging
  "PT",   # flake8-pytest-style
  "A",    # flake8-builtins
  "PL",   # Pylint
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "W605",  # invalid escape sequence
]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-args = 5
max-locals = 15

[tool.ruff.lint.isort]
known-first-party = ["core", "persistence", "collaboration", "apps"]

[tool.ruff.format]
skip-magic-trailing-comma = false
